# WinObjC

./: CMakeLists.txt
stubs/xib2nib/: miscutils.h
tools/vsimporter/xib2nib/: CMakeLists.txt
tools/vsimporter/xib2nib/src/: XIBObjectTypes.cpp
tools/vsimporter/xib2nib/stubs/WBITelemetry/: WBITelemetry.h
